signup and login spacing fixed

--- a/public/styles/media-query.css
+++ b/public/styles/media-query.css
@@ -50,7 +50,7 @@
 
   .form-small-text {
     font-size: .6rem;
-    padding-top: 1.25rem;
+    padding: 1.25rem 0 .5rem 0;
     text-align: center;
   }
 
